@@ -14,6 +14,7 @@
 #  end
 #
 #  a.clear # ensure that the file is deleted
+require "base64"
 class Tracksperanto::Accumulator
   include Enumerable
   
@@ -22,21 +23,16 @@ class Tracksperanto::Accumulator
   
   def initialize
     @store = Tracksperanto::BufferIO.new
-    
     @size = 0
-    @byte_size = 0
     
     super
   end
   
   # Store an object
   def push(object_to_store)
-    @store.seek(@byte_size)
-    
     blob = marshal_object(object_to_store)
     @store.write(blob)
     @size += 1
-    @byte_size = @byte_size + blob.size
     
     object_to_store
   end
@@ -46,27 +42,33 @@ class Tracksperanto::Accumulator
   # Retreive each stored object in succession. All other Enumerable
   # methods are also available (but be careful with Enumerable#map and to_a)
   def each
-    @store.rewind
-    @size.times { yield(recover_object) }
+    # We reopen our tempfile as read-only, and iterate through that (we will have one IO handle
+    # per loop nest)
+    iterable = Tempfile.new("AccumE")
+    iterable.reopen(@store)
+    iterable.seek(0)
+    @size.times { yield(recover_object_from(iterable)) }
+  ensure
+    iterable.close!
   end
   
   # Calls close! on the datastore and deletes the objects in it
   def clear
     @store.close!
     @size = 0
-    @offsets = []
   end
   
   private
   
   def marshal_object(object_to_store)
-    d = Marshal.dump(object_to_store)
+    d = Base64.encode64(Marshal.dump(object_to_store))
     blob = [d.size, "\t", d, "\n"].join
   end
   
-  def recover_object
+  def recover_object_from(from_io)
     # Up to the tab is the amount of bytes to read
-    demarshal_bytes = @store.gets("\t").strip.to_i
-    Marshal.load(@store.read(demarshal_bytes))
+    demarshal_bytes = from_io.gets("\t").to_i
+    blob = from_io.read(demarshal_bytes)
+    Marshal.load(Base64.decode64(blob))
   end
 end
