@@ -1,3 +1,5 @@
+* Modified the Accumulator to support nested iterations
+
 === 2.2.4 / 2011-04-04
 
 * Properly deal with negative frames happening in Shake scripts sometimes. We will now recognize a script starting at negative
